--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     },
     "scripts": {
         "test": "phpunit",
-        "spark": "php spark serve"
+        "start": "php spark serve"
     },
     "support": {
         "forum": "http://forum.codeigniter.com/",
